fixed wrap

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 nav {
   background-color: white;
   padding: 8px 16px;
-  height: 45px;
+  height: 55px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -72,6 +72,7 @@ main {
   padding: 32px 72px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
